[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apitest"
version = "1.0.5"
description = "APItest Testing Framework"
readme = "README.md"
requires-python = ">=3.2"
license = "LGPL-2.1-or-later"
# license-files = ["COPYING", "doc/COPYING.LGPLv2.1"]
keywords = ["API", "testing", "framework", "cli", "http"]
authors = [
    { name = "William McLendon", email = "wcmclen@sandia.gov" },
    { name = "Olivier Lahaye", email = "olivier.lahaye@cea.fr" },
    { name = "DongInn Kim", email = "dikim@cs.indiana.edu" }
]
maintainers = [
    { name = "Olivier Lahaye", email = "olivier.lahaye@cea.fr" }
]
dependencies = [
    "zope.interface>=5.0",
    "Twisted>=18.9"
]
classifiers = [
    "Development Status :: 1.0",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/oscar-cluster/oscar-apitest"
Repository = "https://github.com/oscar-cluster/oscar-apitest.git"
"Bug Tracker" = "https://github.com/oscar-cluster/oscar-apitest/issues"
Documentation = "https://github.com/oscar-cluster/oscar-apitest/blob/master/doc/APItest-userguide-1_0.pdf"
Changelog = "https://github.com/oscar-cluster/oscar-apitest/blob/master/ChangeLog"

[tool.setuptools]
packages = ["libapitest"]
include-package-data = true

[tool.setuptools.package-data]
libapitest = ["*"]

[tool.setuptools.data-files]
"bin" = ["apitest"]
